--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,20 @@
 /modified_prostate_mri.nii
 /requirements.txt
 /__pycache__
+/filtered_dataset
+/collection_tool/Clinical_Set
+/comprehensive_analysis_P-88554873_20250731-125628
+/old_code
+/random_baseline_20250730-150957
+/random_baseline_20250730-162843
+/trained_model.zip
+/results
+/etc
+results/rewards.png
+results/rewards20250328-124732.png
+results/visualize20250416-160627.png
+results/visualize.png
+Visualisation_test.py
+Sphere.py
+output.txt
+.gitignore
