--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,9 @@ clinical_placements.csv
 enhanced_clinical_placement_analysis.png
 experiment_4.py
 experiment_5.py
+eval_1_10.py
+eval_1.py
+eval_3_10.py
 collection_tool/__pycache__/agent_vis_2.cpython-39.pyc
 collection_tool/__pycache__/main_agent.cpython-39.pyc
 collection_tool/__pycache__/main_env.cpython-39.pyc
